changed stream to use collections.tolist()